// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavList renders a simple list 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c2[data-loading] {
  cursor: default;
}

.c2[aria-disabled],
.c2[data-inactive] {
  cursor: not-allowed;
}

.c2[aria-disabled] [data-component="ActionList.Checkbox"],
.c2[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c2 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c2 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c2:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c1 {
  --divider-color: transparent !important;
}

.c2:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c2[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c2:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c1,
.c2[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c2::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  border-radius: 6px;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c7[data-loading] {
  cursor: default;
}

.c7[aria-disabled],
.c7[data-inactive] {
  cursor: not-allowed;
}

.c7[aria-disabled] [data-component="ActionList.Checkbox"],
.c7[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c7 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c7 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c7:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c1 {
  --divider-color: transparent !important;
}

.c7:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c7[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c7:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c1,
.c7[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c4 {
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
}

[data-a11y-link-underlines='true'] .c3[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (forced-colors:active) {
  .c2:focus,
  .c2:focus-visible,
  .c2 > a.focus-visible {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c2:focus-visible,
  .c2 > a.focus-visible,
  .c2:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--bgColor-accent-emphasis,var(--color-accent-emphasis,#0969da));
  }

  .c2:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c7:focus,
  .c7:focus-visible,
  .c7 > a.focus-visible {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c7:focus-visible,
  .c7 > a.focus-visible,
  .c7:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--bgColor-accent-emphasis,var(--color-accent-emphasis,#0969da));
  }

  .c7:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        class="c1 c2"
      >
        <a
          aria-current="page"
          aria-labelledby=":r2:--label  "
          class="c3 c4"
          href="/"
          id=":r2:"
          tabindex="0"
        >
          <div
            class="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c6"
              id=":r2:--label"
            >
              Home
            </span>
          </div>
        </a>
      </li>
      <li
        class="c1 c7"
      >
        <a
          aria-labelledby=":r3:--label  "
          class="c3 c4"
          href="/about"
          id=":r3:"
          tabindex="0"
        >
          <div
            class="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c8"
              id=":r3:--label"
            >
              About
            </span>
          </div>
        </a>
      </li>
      <li
        class="c1 c7"
      >
        <a
          aria-labelledby=":r4:--label  "
          class="c3 c4"
          href="/contact"
          id=":r4:"
          tabindex="0"
        >
          <div
            class="c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="c8"
              id=":r4:--label"
            >
              Contact
            </span>
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList renders with groups 1`] = `
.c1 {
  height: 1px;
  background-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
  margin-top: calc(8px - 1px);
  margin-bottom: 8px;
  list-style: none;
}

.c1:first-child {
  display: none;
}

.c2 {
  list-style: none;
}

.c2:not(:first-child) {
  margin-top: 8px;
}

.c4 {
  padding-inline-start: 0;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
}

.c12 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
}

.c3 {
  font-weight: 600;
  font-size: 32px;
  margin: 0;
  padding-top: 6px;
  padding-bottom: 6px;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 12px;
  font-weight: 600;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
}

.c3:where([data-variant='large']) {
  font: var(--text-title-shorthand-large,600 32px / 1.5 -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji");
}

.c3:where([data-variant='medium']) {
  font: var(--text-title-shorthand-medium,600 20px / 1.6 -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji");
}

.c3:where([data-variant='small']) {
  font: var(--text-title-shorthand-small,600 16px / 1.5 -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji");
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c6[data-loading] {
  cursor: default;
}

.c6[aria-disabled],
.c6[data-inactive] {
  cursor: not-allowed;
}

.c6[aria-disabled] [data-component="ActionList.Checkbox"],
.c6[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c6 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c6 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c6:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c5 {
  --divider-color: transparent !important;
}

.c6:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c6[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c6:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c5,
.c6[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c6::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  border-radius: 6px;
}

.c11 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
}

.c11[data-loading] {
  cursor: default;
}

.c11[aria-disabled],
.c11[data-inactive] {
  cursor: not-allowed;
}

.c11[aria-disabled] [data-component="ActionList.Checkbox"],
.c11[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c11 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c11 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c11:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c5 {
  --divider-color: transparent !important;
}

.c11:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c11[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c11:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c5,
.c11[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c8 {
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
}

[data-a11y-link-underlines='true'] .c7[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (forced-colors:active) {
  .c6:focus,
  .c6:focus-visible,
  .c6 > a.focus-visible {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c6:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c6:focus-visible,
  .c6 > a.focus-visible,
  .c6:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--bgColor-accent-emphasis,var(--color-accent-emphasis,#0969da));
  }

  .c6:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c11:focus,
  .c11:focus-visible,
  .c11 > a.focus-visible {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c11:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c11:focus-visible,
  .c11 > a.focus-visible,
  .c11:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--bgColor-accent-emphasis,var(--color-accent-emphasis,#0969da));
  }

  .c11:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-hidden="true"
        class="c1"
        data-component="ActionList.Divider"
      />
      <li
        class="c2"
      >
        <h3
          class="c3"
          id=":r7:"
        >
          Overview
        </h3>
        <ul
          aria-labelledby=":r7:"
          class="c4"
        >
          <li
            class="c5 c6"
          >
            <a
              aria-current="page"
              aria-labelledby=":r8:--label  "
              class="c7 c8"
              href="/getting-started"
              id=":r8:"
              tabindex="0"
            >
              <div
                class="c9"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="c10"
                  id=":r8:--label"
                >
                  Getting started
                </span>
              </div>
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="c1"
        data-component="ActionList.Divider"
      />
      <li
        class="c2"
      >
        <h3
          class="c3"
          id=":r9:"
        >
          Components
        </h3>
        <ul
          aria-labelledby=":r9:"
          class="c4"
        >
          <li
            class="c5 c11"
          >
            <a
              aria-labelledby=":ra:--label  "
              class="c7 c8"
              href="/Avatar"
              id=":ra:"
              tabindex="0"
            >
              <div
                class="c9"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="c12"
                  id=":ra:--label"
                >
                  Avatar
                </span>
              </div>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav does not have active styles if SubNav contains the current item and is open 1`] = `
.c2 {
  list-style: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 400;
  word-break: break-word;
}

.c8 {
  height: 20px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  margin-left: 8px;
  font-weight: initial;
}

[data-variant="danger"]:hover .c1,
[data-variant="danger"]:active .c8 {
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
}

.c14 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
}

.c10 {
  padding: 0;
  margin: 0;
  display: block;
}

.c9 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c15:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c15[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c11 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c11[data-loading] {
  cursor: default;
}

.c11[aria-disabled],
.c11[data-inactive] {
  cursor: not-allowed;
}

.c11[aria-disabled] [data-component="ActionList.Checkbox"],
.c11[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c11 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c11 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c11:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c11:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c11[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c11:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c11[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c11::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  border-radius: 6px;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
}

.c4[data-loading] {
  cursor: default;
}

.c4[aria-disabled],
.c4[data-inactive] {
  cursor: not-allowed;
}

.c4[aria-disabled] [data-component="ActionList.Checkbox"],
.c4[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c4 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c4 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c4:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c4[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c4[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c13 {
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 16px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 12px;
  font-weight: 400;
}

[data-a11y-link-underlines='true'] .c12[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c13:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c11:focus,
  .c11:focus-visible,
  .c11 > a.focus-visible {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c11:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c11:focus-visible,
  .c11 > a.focus-visible,
  .c11:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--bgColor-accent-emphasis,var(--color-accent-emphasis,#0969da));
  }

  .c11:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {
  .c4:focus,
  .c4:focus-visible,
  .c4 > a.focus-visible {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c4:focus-visible,
  .c4 > a.focus-visible,
  .c4:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--bgColor-accent-emphasis,var(--color-accent-emphasis,#0969da));
  }

  .c4:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-labelledby=":r26:"
        class="c1 c2"
      >
        <button
          aria-controls=":r27:"
          aria-expanded="true"
          aria-labelledby=":r26:--label :r26:--trailing-visual "
          class="c3 c4"
          id=":r26:"
          tabindex="0"
        >
          <div
            class="c1 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <div
              class="c1 c6"
            >
              <span
                class="c1 c7"
                id=":r26:--label"
              >
                Item
              </span>
              <span
                class="c1 c8"
                id=":r26:--trailing-visual"
              >
                <svg
                  aria-hidden="true"
                  class="c9"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </button>
        <div>
          <ul
            aria-labelledby=":r26:"
            class="c1 c10"
            id=":r27:"
          >
            <li
              class="c3 c11"
            >
              <a
                aria-current="page"
                aria-labelledby=":r29:--label  "
                class="c12 c13"
                href="#"
                id=":r29:"
                tabindex="0"
              >
                <div
                  class="c1 c5"
                  data-component="ActionList.Item--DividerContainer"
                >
                  <span
                    class="c1 c14"
                    id=":r29:--label"
                  >
                    Sub Item
                  </span>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav has active styles if SubNav contains the current item and is closed 1`] = `
.c2 {
  list-style: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 {
  height: 20px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: var(--fgColor-muted,var(--color-fg-muted,#656d76));
  margin-left: 8px;
  font-weight: initial;
}

[data-variant="danger"]:hover .c1,
[data-variant="danger"]:active .c8 {
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
}

.c10 {
  padding: 0;
  margin: 0;
  display: none;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 600;
  word-break: break-word;
}

.c9 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 {
  margin: 0;
  padding-inline-start: 0;
  padding-top: 8px;
  padding-bottom: 8px;
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c14:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c14[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c11 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0;
  padding-right: 0;
  font-size: 14px;
  padding-top: 0;
  padding-bottom: 0;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c11[data-loading] {
  cursor: default;
}

.c11[aria-disabled],
.c11[data-inactive] {
  cursor: not-allowed;
}

.c11[aria-disabled] [data-component="ActionList.Checkbox"],
.c11[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c11 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c11 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c11:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c11:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c11[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c11:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c11[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c11::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  border-radius: 6px;
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c15:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c15[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  line-height: 20px;
  min-height: 5px;
  margin-left: 8px;
  margin-right: 8px;
  border-radius: 6px;
  -webkit-transition: background 33.333ms linear;
  transition: background 33.333ms linear;
  color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: unset;
  border: unset;
  width: calc(100% - 16px);
  font-family: unset;
  text-align: unset;
  margin-top: unset;
  margin-bottom: unset;
  font-weight: 600;
  background-color: var(--control-transparent-bgColor-selected,var(--color-action-list-item-default-selected-bg,rgba(208,215,222,0.24)));
}

.c4[data-loading] {
  cursor: default;
}

.c4[aria-disabled],
.c4[data-inactive] {
  cursor: not-allowed;
}

.c4[aria-disabled] [data-component="ActionList.Checkbox"],
.c4[data-inactive] [data-component="ActionList.Checkbox"] {
  cursor: not-allowed;
  background-color: var(--control-bgColor-disabled,rgba(175,184,193,0.2));
  border-color: var(--color-input-disabled-bg,rgba(175,184,193,0.2));
}

.c4 [data-component="ActionList.Item--DividerContainer"] {
  position: relative;
}

.c4 [data-component="ActionList.Item--DividerContainer"]::before {
  content: " ";
  display: block;
  position: absolute;
  width: 100%;
  top: -7px;
  border: 0 solid;
  border-top-width: 0;
  border-color: var(--divider-color,transparent);
}

.c4:not(:first-of-type) {
  --divider-color: var(--borderColor-muted,var(--color-action-list-item-inline-divider,rgba(208,215,222,0.48)));
}

[data-component="ActionList.Divider"] + .c3 {
  --divider-color: transparent !important;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]),
.c4[data-focus-visible-added]:not([aria-disabled]):not([data-inactive]) {
  --divider-color: transparent;
}

.c4:hover:not([aria-disabled]):not([data-inactive]):not([data-loading]) + .c3,
.c4[data-focus-visible-added] + li {
  --divider-color: transparent;
}

.c4::after {
  position: absolute;
  top: calc(50% - 12px);
  left: -8px;
  width: 4px;
  height: 24px;
  content: "";
  background-color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  border-radius: 6px;
}

.c13 {
  color: var(--fgColor-accent,var(--color-accent-fg,#0969da));
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-left: 16px;
  padding-right: 8px;
  padding-top: 6px;
  padding-bottom: 6px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 6px;
  color: inherit;
  font-size: 12px;
  font-weight: 400;
}

[data-a11y-link-underlines='true'] .c12[data-inline='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:is(button) {
  display: inline-block;
  padding: 0;
  font-size: inherit;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c13:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c11:focus,
  .c11:focus-visible,
  .c11 > a.focus-visible {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c11:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c11:focus-visible,
  .c11 > a.focus-visible,
  .c11:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--bgColor-accent-emphasis,var(--color-accent-emphasis,#0969da));
  }

  .c11:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

@media (forced-colors:active) {

}

@media (hover:hover) and (pointer:fine) {

}

@media (forced-colors:active) {
  .c4:focus,
  .c4:focus-visible,
  .c4 > a.focus-visible {
    outline: solid 1px transparent !important;
  }
}

@media (hover:hover) and (pointer:fine) {
  .c4:hover:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-hover,var(--color-action-list-item-default-hover-bg,rgba(208,215,222,0.32)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
    box-shadow: inset 0 0 0 max(1px,0.0625rem) var(--control-transparent-borderColor-active,var(--color-action-list-item-default-active-border,transparent));
  }

  .c4:focus-visible,
  .c4 > a.focus-visible,
  .c4:focus.focus-visible {
    outline: none;
    border: 2 solid;
    box-shadow: 0 0 0 2px var(--bgColor-accent-emphasis,var(--color-accent-emphasis,#0969da));
  }

  .c4:active:not([aria-disabled]):not([data-inactive]) {
    background-color: var(--control-transparent-bgColor-active,var(--color-action-list-item-default-active-bg,rgba(208,215,222,0.48)));
    color: var(--fgColor-default,var(--color-fg-default,#1F2328));
  }
}

<div>
  <nav
    class=""
  >
    <ul
      class="c0"
    >
      <li
        aria-labelledby=":r20:"
        class="c1 c2"
      >
        <button
          aria-controls=":r21:"
          aria-expanded="false"
          aria-labelledby=":r20:--label :r20:--trailing-visual "
          class="c3 c4"
          id=":r20:"
          tabindex="0"
        >
          <div
            class="c1 c5"
            data-component="ActionList.Item--DividerContainer"
          >
            <div
              class="c1 c6"
            >
              <span
                class="c1 c7"
                id=":r20:--label"
              >
                Item
              </span>
              <span
                class="c1 c8"
                id=":r20:--trailing-visual"
              >
                <svg
                  aria-hidden="true"
                  class="c9"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </button>
        <div>
          <ul
            aria-labelledby=":r20:"
            class="c1 c10"
            id=":r21:"
          >
            <li
              class="c3 c11"
            >
              <a
                aria-current="page"
                aria-labelledby=":r23:--label  "
                class="c12 c13"
                href="#"
                id=":r23:"
                tabindex="0"
              >
                <div
                  class="c1 c5"
                  data-component="ActionList.Item--DividerContainer"
                >
                  <span
                    class="c1 c7"
                    id=":r23:--label"
                  >
                    Sub Item
                  </span>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;
